[package]
name = "rust_hft_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }


log = "0.4"
env_logger = "0.10"
